--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,26 @@ body {font-family: "Roboto", sans-serif;
 ul, ol {list-style-type: none;}
 
 a{text-decoration: none;}
+ 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+ 
+img {
+  display: block;
+}
 
 .logo{
   font-family: "Raleway", sans-serif;
