--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {font-family: "Roboto", sans-serif;
 ul, ol {list-style-type: none;}
 
 a{text-decoration: none;}
+.container{
+  max-width: 1158px;
+  padding: 0 15 px;
+  margin: 0 auto;
+}
  
 h1,
 h2,
