--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,14 @@ body {font-family: "Roboto", sans-serif;
     color: #434455;
     background-color: #fff;
 }
-ul, ol {list-style-type: none;}
+ul, ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 a{text-decoration: none;}
+
 .container{
   max-width: 1158px;
   padding: 0 15 px;
@@ -22,12 +27,35 @@ p {
   margin: 0;
 }
 
-ul,
-ol {
-  margin: 0;
-  padding: 0;
+.page-header{
+  border-bottom: 1px solid #E7E9FC;
+ 
 }
  
+.header-container{
+  display: flex;
+  align-items: center;
+}
+.nav-header{
+  display: flex;
+  align-items: center;
+}
+.nav-item{
+  display: flex;
+  align-items: center;
+}
+
+.address-list{
+display: flex;
+align-items: center;
+}
+
+.header-logo{
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 76px;
+}
+
 img {
   display: block;
 }
