--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ a{text-decoration: none;}
 
 .container{
   max-width: 1158px;
-  padding: 0 15 px;
+  padding: 0 15px;
   margin: 0 auto;
 }
  
@@ -48,11 +48,11 @@ p {
 .address-list{
 display: flex;
 align-items: center;
+gap: 40px;
 }
 
 .header-logo{
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
   margin-right: 76px;
 }
 
@@ -69,6 +69,10 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;}
 
+  .nav-item{
+    gap: 40px;
+}
+
 .header-logo .logo-part {
   font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -80,23 +84,31 @@ img {
 }
 
 .nav-link{
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #2e2f42;}
-
+  color: #2e2f42;
+ 
+}
   .nav-link:hover,
   .nav-link:focus{color: #404bbf;}
+
  .contacts{
   font-style: normal;
+  margin-left: auto;
 }
 
 .contacts-link{
+  display: block;
+  padding: 24px 0;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+
 }
 
  .contacts-link:hover,
@@ -104,9 +116,17 @@ color: #434455;
    color: #404bbf;
  }
 
+.container-hero{
+  width: 1440px;
+
+}
+
 .main-page{
-  
-  background: #2e2f42;}
+  display: block;
+  align-items: center;
+  background: #2e2f42;
+  padding-bottom: 188px;
+}
 
 .page-title{
   font-weight: 700;
@@ -115,6 +135,10 @@ color: #434455;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  padding-left: 472px;
+  padding-right: 472px;
+  padding-top: 188px;
+  padding-bottom: 48px;
   }
 
   .button-service{
@@ -123,7 +147,15 @@ color: #434455;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;
-    cursor: pointer;}
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    min-height: 56px;
+    display: block;
+    margin: 0 auto;
+  }
+
  .button-service:hover,
  .button-service:focus{background-color: #404BBF;}
 
