--- a/css/styles.css
+++ b/css/styles.css
@@ -285,12 +285,19 @@ padding-top: 120px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-  color: #f4f4fd;;
+  color: #f4f4fd;
+}
+.footer-logo{
+display: inline-block;
+padding-top: 100px;
 }
  .page-end{
-   
-    
-   background: #2e2f42;}
+  background: #2e2f42;
+}
+
+  .container-footer{
+   width: 100%;
+  }
    
 .end-text {
        font-weight: 400;
@@ -298,4 +305,6 @@ padding-top: 120px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #f4f4fd;
+       padding-bottom: 100px;
+       padding-top: 16px;
      }
