--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,6 @@ color: #434455;
   display: block;
   align-items: center;
   background: #2e2f42;
-  padding-bottom: 188px;
 }
 
 .page-title{
@@ -135,8 +134,9 @@ color: #434455;
   color: #fff;
   padding-left: 472px;
   padding-right: 472px;
-  padding-top: 188px;
+  padding: 188px 0 188px;
   padding-bottom: 48px;
+  max-width: 496px;
   }
 
   .button-service{
@@ -149,9 +149,10 @@ color: #434455;
     border-radius: 4px;
     padding: 16px 32px;
     min-width: 169px;
-    min-height: 56px;
+    height: 56px;
     display: block;
     margin: 0 auto;
+    border: none;
   }
 
  .button-service:hover,
