--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ color: #434455;
   justify-content: center;
     align-items: center;
     gap: 24px;
-  width: calc((100% - 3 *24) / 4);
+  width: calc((100% - 3 * 24) / 4);
 }
 
   .title-section{font-family: "Roboto", sans-serif;
@@ -227,6 +227,7 @@ margin-bottom: 72px;
 }
 
    .title-desc{
+    border-radius: 0px 0px 4px 4px;
     margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
