--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,9 @@ color: #434455;
 .team-list {
   background-color: #F4F4FD
 }
-
+.container-name-team{
+  padding: 32px 0
+}
 .team-iteam{
   display: flex;
   justify-content: center;
@@ -244,7 +246,6 @@ margin-bottom: 72px;
         text-align: center;
         line-height: 1.2;
         color:#2e2f42;
-      padding-top: 32px;
       padding-bottom: 8px;} 
 
 .desc-member-team{ 
@@ -255,7 +256,7 @@ margin-bottom: 72px;
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
-  margin-bottom: 32px;}
+  }
         
 .title-description-port{
     font-weight: 500;
