--- a/css/styles.css
+++ b/css/styles.css
@@ -157,16 +157,16 @@ color: #434455;
  .button-service:hover,
  .button-service:focus{background-color: #404BBF;}
 
-.visually-hidden{
+.visually-hidden {
+  position: absolute;
   width: 1px;
   height: 1px;
-  margin: -1px;
-  border: 0;
   padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
   white-space: nowrap;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  overflow:hidden;
+  border: 0;
 }
 
 .descr-list{
