--- a/css/styles.css
+++ b/css/styles.css
@@ -203,9 +203,8 @@ color: #434455;
   justify-content: center;
     align-items: center;
     gap: 24px;
-  
-}
-
+  }
+ 
   .title-section{font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 36px;
@@ -216,10 +215,14 @@ text-transform: capitalize;
 text-align: center;
 margin-bottom: 72px;
 }
+
+.portfolio{
+  padding: 120px 0 120px 0;
+}
+
 .portfolio-list{
   display: flex;
   flex-wrap: wrap;
-  padding-top: 72px;
   gap: 24px;
 }
 
@@ -241,6 +244,7 @@ margin-bottom: 72px;
    letter-spacing: 0.02em;
    color: #2e2f42;
   width: calc((100% - 3 * 24) / 4);
+
   background-color: #FFFFFF
 }
 
