--- a/css/styles.css
+++ b/css/styles.css
@@ -299,7 +299,7 @@ margin-bottom: 72px;
 }
 .footer-logo{
 display: inline-block;
-padding-top: 100px;
+margin-bottom: 16px;
 }
  .page-end{
   padding: 100px 0;
@@ -316,6 +316,5 @@ padding-top: 100px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: #f4f4fd;
-       padding-bottom: 100px;
-       padding-top: 16px;
+      max-width: 264px
      }
