--- a/css/styles.css
+++ b/css/styles.css
@@ -169,7 +169,7 @@ color: #434455;
   border: 0;
 }
 .desc-work{
-  padding: 120px 0;
+  padding: 120px 0 120px;
 }
 
 .descr-list{
@@ -244,7 +244,7 @@ margin-bottom: 72px;
    line-height: 1.2;
    letter-spacing: 0.02em;
    color: #2e2f42;
-  width: calc((100% - 3 * 24) / 4);
+  width: calc((100% - 72px) / 4);
 
   background-color: #FFFFFF
 }
