--- a/css/styles.css
+++ b/css/styles.css
@@ -164,9 +164,11 @@ color: #434455;
   padding: 0;
   margin: -1px;
   overflow: hidden;
+  clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
+
 }
 .desc-work{
   padding: 120px 0 120px;
